# fast-blogging

./: .env  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
migrations/: migrate.sh
migrations/sql/: V1__CreateUserTable.sql  V2__CreateArticleTable.sql
src/: main.py
src/configs/: database.py  environment.py
src/custom_types/: requests.py  responses.py
src/middlewares/: authentication.py
src/models/: article_model.py  base.py  user_model.py
src/repositories/: articles_repository.py  users_repository.py
src/routers/: articles_v1_router.py  auth_router.py
src/services/: articles_v1_service.py  users_service.py
src/utils/: constants.py
